--- a/layersconfig.json
+++ b/layersconfig.json
@@ -1,22 +1,21 @@
-{"layers":
-	[
-		{ 
-			"layercodename":"osm",
-			"layername": "Open Street Map",
-			"pathto":"'http://{s}.tile.osm.org/{z}/{x}/{y}.png'",
-			"layertype":"basemap",
-			"layertypefunction":"ltilelayer",
-			
-		},
-		{ 
-			"layercodename":"olen",
-			"layername": "Треки оленей",
-			"pathto":"rerere.json",
-			"layertype":"overlay",
-			"layertypefunction":"casual",
-			"geometry":"polyline",
-			"color": "#000",
-			"width": 1
-		}
-	]
+{
+  "layers": [
+    {
+      "layercodename": "osm",
+      "layername": "Open Street Map",
+      "pathto": "http://{s}.tile.osm.org/{z}/{x}/{y}.png",
+      "layertype": "basemap",
+      "layertypefunction": "ltilelayer"
+    },
+    {
+      "layercodename": "olen",
+      "layername": "Треки оленей",
+      "pathto": "rerere.json",
+      "layertype": "overlay",
+      "layertypefunction": "casual",
+      "geometry": "polyline",
+      "color": "#000",
+      "width": 1
+    }
+  ]
 }
