--- a/mapconfig.json
+++ b/mapconfig.json
@@ -3,9 +3,9 @@
 	[
 		{
 			"center": [59.940081,30.311094],
-			"zoom": 11,
-			"minZoom": 10,
-			"maxZoom": 15,
+			"zoom": "10",
+			"minZoom":"1",
+			"maxZoom": "25",
 			"crs": "L.CRS.EPSG3857"
 		}
 	]
