--- a/layersconfig.json
+++ b/layersconfig.json
@@ -1,10 +1,24 @@
 {
   "layers": [
+      {
+      "layercodename": "Mapnik",
+      "layername": "BlackAndWhite",
+      "pathto": "http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png",
+      "layertype": "basemap",
+      "layertypefunction": "ltilelayer"
+    },
     {
       "layercodename": "osm",
       "layername": "Open Street Map",
       "pathto": "http://{s}.tile.osm.org/{z}/{x}/{y}.png",
       "layertype": "basemap",
+      "layertypefunction": "ltilelayer"
+    },
+     {
+      "layercodename": "oseam",
+      "layername": "Open Sea Map",
+      "pathto": "http://tiles.openseamap.org/seamark/{z}/{x}/{y}.png",
+      "layertype": "overlay",
       "layertypefunction": "ltilelayer"
     },
     {
